feat: add authorized incident api
